# byteorder

./: Cargo.toml  README.md
benches/: bench.rs
src/: io.rs  lib.rs
