[package]
name = "byteorder"
# NB: When modifying, also modify html_root_url in lib.rs
version = "1.2.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Library for reading/writing numbers in big-endian and little-endian."
documentation = "https://docs.rs/byteorder"
homepage = "https://github.com/BurntSushi/byteorder"
repository = "https://github.com/BurntSushi/byteorder"
readme = "README.md"
categories = ["encoding", "parsing"]
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "Unlicense/MIT"

[lib]
name = "byteorder"
bench = false
crate-type = ["lib"]

[dependencies]
nostd_io = { git = "https://github.com/wmiller848/nostd_io.git" }

[dev-dependencies]
quickcheck = { version = "0.6", default-features = false }
rand = "0.4"

[features]
default = []
i128 = []

[profile.bench]
opt-level = 3

[badges]
travis-ci = { repository = "BurntSushi/byteorder" }
